--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Estilos generales */
 .App {
-  font-family: Arial, sans-serif;
+  font-family: Hey August;
   margin: 0;
   padding: 0;
   background-color: #f7f7f7;
