--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -10,7 +10,7 @@
   
  
   .Header {
-    background-color: #f0f0f0;
+    background-color: #752218;
     padding: 10px;
     border-bottom: 1px solid #ddd;
   }
@@ -35,7 +35,7 @@
   }
   
   .Option {
-    background-color: #4CAF50;
+    background-color: #fbfdfb;
     color: #fff;
     padding: 10px 20px;
     border: none;
