--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,25 +1,38 @@
-.btn {
-
-    background-color: #0461f8;
+.contenedor-botones {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: transparent;
+  }
+  
+  .btn-incrementar, .btn-decrementar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: transparent; /* Fondo transparente */
+    color: #333; /* Color del texto */
+    border: 1px solid #333; /* Borde */
+  }
+  
+  
+  
+  .btn-agregar {
+    background-color: transparent;
     width: 100px;
     height: 35px;
     border-radius: 10px;
     border: none;
-
     font-size: 17px;
     font-weight: 300;
     cursor: pointer;
-}
-
-.btnagregar {
- 
-    background-color: #0461f8;
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    border: none;
-
+    color: #666; /* Color del texto */
+  }
+  .contenedor-botones span {
     font-size: 17px;
-    font-weight: 300;
-    cursor: pointer;
-}
+    color: #333; /* Color del texto */
+  }
+    
