--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,14 +3,15 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: #f7f7f7;
+    background-color: #752218;
     border-bottom: 1px solid #ddd;
   }
   
   .NavBar h3 {
     margin: 0;
     font-weight: bold;
-    color: #3907ee;
+    color: #f6f5fa;
+    font-family: ;
   }
   
   .Categories {
