--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,44 +1,45 @@
 .CardItem {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .Header {
-    background-color: #f0f0f0;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  .ItemImg {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
- 
-  .Info {
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 10px;
-  }
-  
-  .ItemFooter {
-    padding: 10px;
-    background-color: #f0f0f0;
-    border-top: 1px solid #ddd;
-  }
-  
-  .Option {
-    background-color: #4CAF50;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  height: 400px;
+  overflow-y: auto;
+}
+
+.Header {
+  background-color: transparent;
+  padding: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: medium;
+  overflow: hidden;
+}
+.ItemImg {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.Info {
+  font-size: 14px;
+  color: #f3f3f3;
+  margin-bottom: 10px;
+  overflow-wrap: break-word;
+}
+
+.ItemFooter {
+  padding: 10px;
+  background-color: #752218;
+  border-top: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
