--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ a:hover {
 /* Estilos para el mensaje de error 404 */
 .error-404 {
   font-size: 2rem;
-  color: #666;
+  color: #ffffff;
   text-align: center;
   padding: 2rem;
 }
