--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,53 +1,82 @@
+/* Estilos generales */
 .NavBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background-color: #752218;
-    border-bottom: 1px solid #ddd;
-  }
-  
-  .NavBar h3 {
-    margin: 0;
-    font-weight: bold;
-    color: #f6f5fa;
-    display: inline-block;
-    vertical-align: middle;
-  }
-  
-  .Categories {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 20px;
-  }
-  
-  .Option {
-    margin: 0 10px;
-    padding: 10px;
-    color: #666;
-    text-decoration: none;
-    transition: background-color 0.2s ease;
-  }
-  
-  .Option:hover {
-    background-color: #f2f2f2;
-  }
-  
-  .ActiveOption {
-    background-color: #333;
-    color: #fff;
-    border-radius: 5px;
-  }
-  
-  .CartWidget {
-    margin-left: 20px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #752218;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-  .logo {
-    max-width: 75px;
-    max-height: 75px;
-    display: inline-block;
-    vertical-align: middle;
-  }
-    
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  width: 50px;
+  margin-right: 0.5rem;
+}
+
+.logo-container h3 {
+  color: #ffffff; /* Texto en blanco */
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.Categories {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+/* Estilos para los enlaces y el botón */
+.Option, .ActiveOption {
+  text-decoration: none;
+  color: #fcfcfc; /* Color blanco */
+  font-weight: 500;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.Option:hover {
+  background-color: #f0f0f0;
+  color: #752218; /* Color principal */
+}
+
+.ActiveOption {
+  background-color: #ffffff;
+  color: #752218;
+  border-radius: 5px;
+}
+
+/* Estilos para el dropdown */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.dropdown-content .Option {
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
