--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -28,12 +28,24 @@
 }
 
 /* Imagen */
-.ItemImg {
-  width: 100%; /* Ajuste al ancho del contenedor */
-  height: 200px; /* Altura fija */
-  object-fit: cover; /* Escala la imagen sin deformarla */
+picture {
+  width: 100%;
+  min-height: 200px;
   border-radius: 5px;
   margin-bottom: 10px;
+  background: #752218;
+}
+
+picture>p{
+  color: #ffffff;
+}
+
+.ItemImg {
+  width: 100%; /* Ajuste al ancho del contenedor */
+  min-height: 200px; /* Altura fija */
+  height: 200px;
+  object-fit: cover; /* Escala la imagen sin deformarla */
+  border-radius: 5px;
 }
 
 /* Título */
