--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -1,5 +1,6 @@
 /* Estilo del contenedor principal */
 .CardList {
+  height: 100vh;
   display: flex; /* Habilita flexbox */
   flex-wrap: wrap; /* Permite que los items salten a otra fila si no caben */
   justify-content: center; /* Centra las tarjetas horizontalmente */
