--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,11 +1,11 @@
 /* Estilo general del contenedor */
-div {
+
+  #login-form{
     display: flex;
-    justify-content: center;
+    margin-top: 10rem;
     align-items: center;
-    min-height: 100vh;
-    background-color: #f9f9f9;
-    font-family: Arial, sans-serif;
+    flex-direction: column;
+    height: 100vh;
   }
   
   /* Estilo del formulario */
@@ -57,9 +57,10 @@ div {
   
   /* Botón */
   button {
+    margin-top: 10px;
     width: 100%;
     padding: 0.75rem;
-    background-color: #6c63ff;
+    background-color: #752218;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -69,13 +70,12 @@ div {
   }
   
   button:hover {
-    background-color: #5752d3;
+    background-color: #4E1500;
   }
-  
-  /* Mensaje de error */
-  p {
-    color: red;
-    margin-top: 0.5rem;
-    font-size: 0.9rem;
+
+  button:active {
+    color: #752218;
+    background-color: #ffffff;
   }
+
   
