--- a/src/components/CheckoutForm/CheckoutForm.css
+++ b/src/components/CheckoutForm/CheckoutForm.css
@@ -5,6 +5,9 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     border-radius: 8px;
+    position: fixed;
+    top: 30%; /* Ajustar este valor según la altura del navbar */
+    left: 30%;
   }
   
   .InfoText {
