--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,6 +4,7 @@
   line-height: 1.6;
   color: #333;
   position: relative;
+  text-align: center;
 }
 
 .contenedor h1 {
@@ -23,6 +24,13 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Contenedor que permite organizar las tarjetas de forma flotante */
+.cards-container {
+  position: relative;
+  width: 100%;
+  height: 600px; /* Ajusta esto según necesites */
+}
+
 .dynamic-box {
   position: absolute;
   background-color: #f9f9f9;
@@ -40,39 +48,40 @@
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
 
+/* Ubicaciones distintas para cada tarjeta */
 .dynamic-box:nth-child(1) {
-  top: 750px;
+  top: 100px;
   left: 50px;
   --rotate: -5deg;
   background-color: #eaf8f1;
 }
 
 .dynamic-box:nth-child(2) {
-  top: 750px;
+  top: 200px;
   right: 50px;
   --rotate: 3deg;
   background-color: #f0f7fd;
 }
 
 .dynamic-box:nth-child(3) {
-  top: 750px;
-  left: 350px;
+  top: 300px;
+  left: 150px;
   --rotate: -8deg;
   background-color: #fdecea;
 }
 
 .dynamic-box:nth-child(4) {
-  top: 550px;
-  right: 250px;
+  top: 400px;
+  right: 150px;
   --rotate: 5deg;
   background-color: #fcf4de;
 }
 
 .dynamic-box:nth-child(5) {
-  top: 750px;
-  right: 250px;
-  --rotate: 5deg;
-  background-color: #fcf4de;
+  top: 500px;
+  left: 250px;
+  --rotate: -3deg;
+  background-color: #dfe9f3;
 }
 
 .dynamic-box p {
@@ -82,8 +91,26 @@
   text-align: justify;
 }
 
+/* Responsividad */
+@media (max-width: 768px) {
+  .cards-container {
+    height: auto;
+  }
 
+  .dynamic-box {
+    position: relative;
+    margin: 10px auto;
+    width: 90%;
+    transform: none;
+  }
 
+  .dynamic-box:nth-child(n) {
+    top: auto;
+    left: auto;
+    right: auto;
+    transform: none;
+  }
+}
 
 
 
